--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -1,4 +1,4 @@
-name: Deploy in production
+name: Deploy in Production
 
 on:
   push:
@@ -6,17 +6,16 @@ on:
       - main
 
 jobs:
-  publish-production:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
+          heroku_app_name: "nonnatittina-bot"
           heroku_email: ${{secrets.HEROKU_EMAIL}}
           usedocker: true
-          docker_heroku_process_type: "worker"
           docker_build_args: TG_BOT_TOKEN
         env:
-          TG_BOT_TOKEN: ${{secrets.TELEGRAM_BOT_TOKEN}}
+          TG_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
