--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,7 +1,7 @@
 name: publish
 on: [push]
 jobs:
-  publish-hello-docker-image:
+  publish-docker-image:
    runs-on: ubuntu-latest
    steps:
       - uses: actions/checkout@v2
