--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,5 +1,8 @@
 name: publish
-on: [push]
+on:
+  pull_request:
+    branches:
+       - main
 jobs:
   publish-docker-image:
    runs-on: ubuntu-latest
