Trigger the workflow for each push on `main`

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,8 +1,10 @@
-name: publish
+name: Push docker image to the registry
+
 on:
-  pull_request:
+  push:
     branches:
        - main
+
 jobs:
   publish-docker-image:
    runs-on: ubuntu-latest
@@ -14,7 +16,7 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build the Docker image and push
+      - name: Build and push the Docker image
         run: |
              docker build . --tag ghcr.io/imgios/nonnatittina-bot:latest
              docker push ghcr.io/imgios/nonnatittina-bot:latest
